Мне не очень нравится текущий код

--- a/views/index.html
+++ b/views/index.html
@@ -14,5 +14,7 @@
     <input type="text" name="studentName">
     <input type="text" name="studentGroup">
     <button class="addStudentBtn">Add student</button>
+    <br>
+    <table> <tr> Имя</tr> <tr> Группа </tr> </table>
 </body>
 </html>
