Готово, но нужно причесывать код и сделать валидацию

--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,12 @@
     <input type="text" name="studentGroup">
     <button class="addStudentBtn">Add student</button>
     <br>
-    <table> <tr> Имя</tr> <tr> Группа </tr> </table>
+    <table id="studentTable">
+    <tr>
+        <td>Name</td>
+        <td>Group</td>
+    </tr>
+
+  </table>
 </body>
 </html>
