--- a/views/index.html
+++ b/views/index.html
@@ -5,16 +5,20 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/public/css/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/public/css/errors.css'>
+
     <script src='main.js'></script>
 </head>
 <body>
     <h2>student db</h2>
     
-    <input type="text" name="studentName">
-    <input type="text" name="studentGroup">
+    <input type="text" placeholder="studentName" name="studentName">
+    <input type="text" placeholder="studentGroup" name="studentGroup">
     <button class="addStudentBtn">Add student</button>
-    <br>
+    <span id="serverError" aria-live="polite"></span>
+
+
     <table id="studentTable">
     <tr>
         <td>Name</td>
