--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='/public/css/main.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/public/css/errors.css'>
 
-    <script src='main.js'></script>
+    <script src='/public/js/main.js'></script>
 </head>
 <body>
     <h2>student db</h2>
