--- a/views/index.html
+++ b/views/index.html
@@ -11,18 +11,18 @@
     <script src='/public/js/main.js'></script>
 </head>
 <body>
-    <h2>student db</h2>
+    <h2>countries db</h2>
     
-    <input type="text" placeholder="studentName" name="studentName">
-    <input type="text" placeholder="studentGroup" name="studentGroup">
-    <button class="addStudentBtn">Add student</button>
+    <input type="text" placeholder="country name" name="countryName">
+    <input type="text" placeholder="country capital" name="countryCapital">
+    <button class="addCountryBtn">Add country</button>
     <span id="serverError" aria-live="polite"></span>
 
 
-    <table id="studentTable">
+    <table id="countryTable">
     <tr>
         <td>Name</td>
-        <td>Group</td>
+        <td>Capital</td>
     </tr>
 
   </table>
