--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
     <h2>countries db</h2>
     
     <input type="text" placeholder="country name" name="countryName">
-    <input type="text" placeholder="country capital" name="countryCapital">
+    <input type="text" placeholder="country capital" name="countryCapitalName">
     <button class="addCountryBtn">Add country</button>
     <span id="serverError" aria-live="polite"></span>
 
@@ -23,6 +23,7 @@
     <tr>
         <td>Name</td>
         <td>Capital</td>
+        <td>Delete</td>
     </tr>
 
   </table>
